# KIAPI2022_V2X

./: .gitignore  README.md  v2x.sh  v2x_parser.launch
v2x_mission/: CMakeLists.txt  Makefile  README.md  package.xml
v2x_mission/header/: setSocket.h  setStage1.h  setStage2.h
v2x_mission/include/: obu_packet.h
v2x_mission/launch/: v2x_mission.launch
v2x_mission/src/: .setStage1.cpp.swp  main.cpp  setSocket.cpp  setStage1.cpp  setStage2.cpp
v2x_mission/utils/: mission_parse.py  mission_test.py  mission_test2.py  test1.py  test2.py  topic_test.py  topic_test2.py
v2x_parser/: .gitignore  CMakeLists.txt  README.md  package.xml
v2x_parser/include/: j2735.h  sample.h
v2x_parser/launch/: v2x_parser.launch
v2x_parser/log/pvd/: pvd_1655993767125.json  pvd_1655993767520.json  pvd_1655993768724.json  pvd_1655993769119.json  pvd_1663747565869.json  pvd_1663747566274.json  pvd_1663749047289.json  pvd_1663749048693.json  pvd_1663749080866.json  pvd_1663749081061.json  pvd_1663749095901.json  pvd_1663749096104.json  pvd_1663749105692.json  pvd_1663749110431.json  pvd_1663749111436.json  pvd_1665632529981.json  pvd_1665632530980.json  pvd_1665632531187.json  pvd_1665633730864.json  pvd_1665633731864.json  pvd_1665633732672.json  pvd_1665633733272.json
v2x_parser/log/spat/: spat_KIAPI-1_1655993767125.json  spat_KIAPI-1_1655993767348.json  spat_KIAPI-1_1655993768127.json  spat_KIAPI-1_1655993768360.json  spat_KIAPI-1_1655993769058.json  spat_KIAPI-1_1663747565940.json  spat_KIAPI-1_1663749047410.json  spat_KIAPI-1_1663749048057.json  spat_KIAPI-1_1663749048259.json  spat_KIAPI-1_1663749096124.json  spat_KIAPI-1_1663749096367.json  spat_KIAPI-1_1663749110340.json  spat_KIAPI-1_1663749110866.json  spat_KIAPI-1_1663749111119.json  spat_KIAPI-1_1663749111436.json  spat_KIAPI-2_1655993767226.json  spat_KIAPI-2_1655993767924.json  spat_KIAPI-2_1655993768228.json  spat_KIAPI-2_1655993768927.json  spat_KIAPI-2_1655993769231.json  spat_KIAPI-2_1663747565798.json  spat_KIAPI-2_1663749047966.json  spat_KIAPI-2_1663749080980.json  spat_KIAPI-2_1663749096023.json  spat_KIAPI-2_1663749110674.json  spat_KIAPI-2_1663749110947.json  spat_KIAPI-3_1655993767438.json  spat_KIAPI-3_1655993768441.json  spat_KIAPI-3_1663747566223.json  spat_KIAPI-3_1663749047471.json  spat_KIAPI-3_1663749047582.json  spat_KIAPI-3_1663749048461.json  spat_KIAPI-3_1663749096195.json  spat_KIAPI-3_1663749096509.json  (+3 more)
v2x_parser/src/: bsm.c  j2735.c  pvd.c  sample.c
v2x_parser/utils/: topic_test.py
